unpackaged/main/default/objects/Activity/fields/Action_Committed__c.field-meta.xml
<CustomField>
    <fullName>Action_Committed__c</fullName>
    <description>US-0018705 Merchant Support Group - Add Fields in Tasks for MSO</description>
    <label>Action Committed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBT</fullName>
            </value>
            <value>
                <fullName>Increase inventory</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>B2C promo</fullName>
            </value>
            <value>
                <fullName>Item/Order Discounts (SME)</fullName>
            </value>
            <value>
                <fullName>Shop upgrade</fullName>
            </value>
            <value>
                <fullName>Free shipping</fullName>
            </value>
            <value>
                <fullName>Shipping options</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Seller standard</fullName>
            </value>
            <value>
                <fullName>Limits</fullName>
            </value>
            <value>
                <fullName>Technical issues/ Merchant Solutions</fullName>
            </value>
            <value>
                <fullName>Daily deals</fullName>
            </value>
            <value>
                <fullName>Account Specifics</fullName>
            </value>
            <value>
                <fullName>Listing optimization</fullName>
            </value>
            <value>
                <fullName>Other - specify in comments</fullName>
            </value>
            <value>
                <fullName>Coronavirus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>