unpackaged/main/default/objects/Activity/fields/Action_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Action_Outcome__c</fullName>
    <description>US-0018705 Merchant Support Group - Add Fields in Tasks for MSO,
US-0008531</description>
    <label>Action Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highly engaged (committed)</fullName>
            </value>
            <value>
                <fullName>Engaged (listened but no commitment)</fullName>
            </value>
            <value>
                <fullName>Not engaged at present</fullName>
            </value>
            <value>
                <fullName>Not interested in Gold</fullName>
            </value>
            <value>
                <fullName>Unreachable - no action</fullName>
            </value>
            <value>
                <fullName>To be called back</fullName>
            </value>
            <value>
                <fullName>Unreachable - email sent</fullName>
            </value>
            <value>
                <fullName>Not reached (wrong details)</fullName>
            </value>
            <value>
                <fullName>Not reached ( failed call attempt)</fullName>
            </value>
            <value>
                <fullName>DMC Not Interested</fullName>
            </value>
            <value>
                <fullName>DMC Interested</fullName>
            </value>
            <value>
                <fullName>DMC Committed</fullName>
            </value>
            <value>
                <fullName>Seller ineligible</fullName>
            </value>
            <value>
                <fullName>Bounced Email</fullName>
                <isActive>false</isActive>
                <label>Bounced Email</label>
            </value>
            <value>
                <fullName>Busy</fullName>
                <isActive>false</isActive>
                <label>Busy</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <isActive>false</isActive>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>Left Message</fullName>
                <isActive>false</isActive>
                <label>Left Message</label>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
                <isActive>false</isActive>
                <label>Unable to Contact</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>