unpackaged/main/default/objects/Activity/fields/Action_Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Outcome_Date__c</fullName>
    <description>US-0018705 Merchant Support Group - Add Fields in Tasks for MSO</description>
    <label>Action Outcome Date</label>
    <type>DateTime</type>
</CustomField>