unpackaged/main/default/objects/Activity/fields/Ad_Products__c.field-meta.xml
<CustomField>
    <fullName>Ad_Products__c</fullName>
    <inlineHelpText>optional</inlineHelpText>
    <label>Ad Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>PLS</fullName>
            </value>
            <value>
                <fullName>PLX</fullName>
            </value>
            <value>
                <fullName>1PD</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>3PD</fullName>
                <isActive>false</isActive>
                <label>3PD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>