unpackaged/main/default/objects/Activity/fields/Blocker_Comments__c.field-meta.xml
<CustomField>
    <fullName>Blocker_Comments__c</fullName>
    <description>US-0006835 [AU] Acquisition Task Changes</description>
    <label>Blocker Comments</label>
    <type>TextArea</type>
</CustomField>