unpackaged/main/default/objects/Activity/fields/Call_attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_attempts__c</fullName>
    <label>Call attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>