unpackaged/main/default/objects/Activity/fields/Call_Back_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Comments__c</fullName>
    <description>EPH-7268</description>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>