unpackaged/main/default/objects/Activity/fields/Call_Back_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_End_Time__c</fullName>
    <description>EPH-7268 (for the time)</description>
    <label>Call Back End Time</label>
    <length>6</length>
    <type>Text</type>
</CustomField>