unpackaged/main/default/objects/Activity/fields/Call_Back_Window_end__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Window_end__c</fullName>
    <description>http://txl-entas-057:8080/browse/EPH-7268</description>
    <label>Call Back Window (end)</label>
    <type>DateTime</type>
</CustomField>