unpackaged/main/default/objects/Activity/fields/Call_Back_Window_start__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Window_start__c</fullName>
    <label>Call Back Window (start)</label>
    <type>DateTime</type>
</CustomField>