unpackaged/main/default/objects/Activity/fields/Call_Back_Window_Start_CT__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Window_Start_CT__c</fullName>
    <description>EPH-7268</description>
    <label>Call Back Window (start) (Clicktools)</label>
    <type>Date</type>
</CustomField>