unpackaged/main/default/objects/Activity/fields/Campaign_Country__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Country__c</fullName>
    <label>Campaign Country</label>
    <length>3</length>
    <type>Text</type>
</CustomField>