unpackaged/main/default/objects/Activity/fields/Campaign_Group__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Group__c</fullName>
    <description>US-0007317 - [AU] Define User Views on GCX Portal</description>
    <formula>TEXT(Related_Campaign__r.Campaign_Group__c)</formula>
    <label>Campaign Group</label>
    <type>Text</type>
</CustomField>