unpackaged/main/default/objects/Activity/fields/Campaign_Priority__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Priority__c</fullName>
    <description>US-0007317 - [AU] Define User Views on GCX Portal</description>
    <formula>TEXT(Related_Campaign__r.Campaign_Priority__c )</formula>
    <label>Campaign Priority</label>
    <type>Text</type>
</CustomField>