unpackaged/main/default/objects/Activity/fields/Campaign_Related_Seller_Details__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Related_Seller_Details__c</fullName>
    <label>Campaign Related Seller Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>