unpackaged/main/default/objects/Activity/fields/ContactMailingState__c.field-meta.xml
<CustomField>
    <fullName>ContactMailingState__c</fullName>
    <label>Contact Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>