unpackaged/main/default/objects/Activity/fields/ContactTimeZone__c.field-meta.xml
<CustomField>
    <fullName>ContactTimeZone__c</fullName>
    <description>US-0009689 - [PL Adv] Ads PL Team Mate to be able to view “Mailing State” and “Timezone” of Seller Contact</description>
    <label>Contact Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>