unpackaged/main/default/objects/Activity/fields/EBH_Account__c.field-meta.xml
<CustomField>
    <fullName>EBH_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-4122) - to populate comments with Urgency Action and Urgency Reason</description>
    <label>Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>