unpackaged/main/default/objects/Activity/fields/EBH_CampaignMemberId__c.field-meta.xml
<CustomField>
    <fullName>EBH_CampaignMemberId__c</fullName>
    <description>[EBH] (EPH-3780)</description>
    <label>Campaign Member Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>