unpackaged/main/default/objects/Activity/fields/EBH_DMC__c.field-meta.xml
<CustomField>
    <fullName>EBH_DMC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-3664)</description>
    <label>DMC</label>
    <type>Checkbox</type>
</CustomField>