unpackaged/main/default/objects/Activity/fields/EBH_fResponseCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_fResponseCode__c</fullName>
    <description>26/08/2020: US-0008131 - Typo in &quot;Response code Text&quot; field on Task History Object</description>
    <formula>CASE( EBH_ResponseCode__c ,
 10, &quot;In Queue&quot;,
 22,&quot;Call Cancelled&quot;,
 25, &quot;Seller Ineligible&quot;, 
 30, &quot;Wrong Phone Number&quot;, 
 40, &quot;Call not answered&quot;, 
 50, &quot;Not Reached&quot;, 
 60, &quot;DMC Not Reached&quot;, 
 70, &quot;DMC Not Interested&quot;, 
 90, &quot;DMC Interested&quot;,
100, &quot;DMC Committed&quot;,&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Code</label>
    <type>Text</type>
</CustomField>