unpackaged/main/default/objects/Activity/fields/EBH_LegacyID__c.field-meta.xml
<CustomField>
    <fullName>EBH_LegacyID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[EBH] Legacy ID</description>
    <label>Legacy ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>