unpackaged/main/default/objects/Activity/fields/EBH_Response__c.field-meta.xml
<CustomField>
    <fullName>EBH_Response__c</fullName>
    <description>[EBH] (EPH-3519)</description>
    <label>Response</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Planned</fullName>
            </value>
            <value>
                <fullName>Phone Blacklist</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Call Not Answered</fullName>
            </value>
            <value>
                <fullName>DMC Not Reached</fullName>
            </value>
            <value>
                <fullName>DMC Not Interested</fullName>
            </value>
            <value>
                <fullName>Unsubscribe</fullName>
            </value>
            <value>
                <fullName>DMC Interested</fullName>
            </value>
            <value>
                <fullName>DMC Committed</fullName>
            </value>
            <value>
                <fullName>Call Back Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>