unpackaged/main/default/objects/Activity/fields/EBH_ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>EBH_ResponseCode__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Field to receive a numeric response code either from clicktools or from CampaignMember

https://hive.lightning.force.com/apex/GoToUserStory?US-0007408</description>
    <label>EBH_ResponseCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>