unpackaged/main/default/objects/Activity/fields/Field_for_sorting__c.field-meta.xml
<CustomField>
    <fullName>Field_for_sorting__c</fullName>
    <description>EPH-7261</description>
    <formula>if( text(Order_Priority__c)=&quot;0&quot;,99999,value(text(Order_Priority__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field for sorting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>