unpackaged/main/default/objects/Activity/fields/Follow_Up_Task__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to use as a flag to update the subject</description>
    <label>Follow Up Task</label>
    <type>Checkbox</type>
</CustomField>