unpackaged/main/default/objects/Activity/fields/Log_Task__c.field-meta.xml
<CustomField>
    <fullName>Log_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EPH-7946 Coupon Seller - attach the excel to the related</description>
    <label>Log Task</label>
    <type>Checkbox</type>
</CustomField>