unpackaged/main/default/objects/Activity/fields/Main_Objective__c.field-meta.xml
<CustomField>
    <fullName>Main_Objective__c</fullName>
    <inlineHelpText>optional</inlineHelpText>
    <label>Main Objective</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start using Ads Product(s)</fullName>
            </value>
            <value>
                <fullName>Increase Adoption</fullName>
            </value>
            <value>
                <fullName>Increase Ad Rate</fullName>
            </value>
            <value>
                <fullName>Optimization Strategy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>