unpackaged/main/default/objects/Activity/fields/MCStatus__c.field-meta.xml
<CustomField>
    <fullName>MCStatus__c</fullName>
    <description>US-0007006</description>
    <label>MC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>