unpackaged/main/default/objects/Activity/fields/OracleID__c.field-meta.xml
<CustomField>
    <fullName>OracleID__c</fullName>
    <formula>EBH_Account__r.EBH_OracleID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OracleID</label>
    <type>Text</type>
</CustomField>