unpackaged/main/default/objects/Activity/fields/Outcome2__c.field-meta.xml
<CustomField>
    <fullName>Outcome2__c</fullName>
    <label>Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account committed</fullName>
            </value>
            <value>
                <fullName>Account not interested at all</fullName>
                <label>Account not interested</label>
            </value>
            <value>
                <fullName>Account is ineligible</fullName>
                <label>Account ineligible</label>
            </value>
            <value>
                <fullName>Account not reached</fullName>
            </value>
            <value>
                <fullName>Account interested</fullName>
            </value>
            <value>
                <fullName>Wrong contact details</fullName>
            </value>
            <value>
                <fullName>Account interested but not yet committed</fullName>
                <isActive>false</isActive>
                <label>Account interested but not yet committed</label>
            </value>
            <value>
                <fullName>Account is live</fullName>
                <isActive>false</isActive>
                <label>Account is live</label>
            </value>
            <value>
                <fullName>Account not interested at this time/follow up needed</fullName>
                <isActive>false</isActive>
                <label>Account not interested at this time/follow up needed</label>
            </value>
            <value>
                <fullName>Unable to contact/follow up needed</fullName>
                <isActive>false</isActive>
                <label>Unable to contact/follow up needed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>