unpackaged/main/default/objects/Activity/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>US-0007461 - [AU &amp; EU] Log a call</description>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Managed Payment</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>