unpackaged/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>US-0009940 - [UK Risk] Create a New Task Layout for Seller Risk Management Project</description>
    <inlineHelpText>Reason for creating the Task</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Documents</fullName>
            </value>
            <value>
                <fullName>Missing/Additional Information</fullName>
            </value>
            <value>
                <fullName>Invalid Information</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>