unpackaged/main/default/objects/Activity/fields/RelatedCouponSeller__c.field-meta.xml
<CustomField>
    <fullName>RelatedCouponSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007574 - [AU] GCX: related coupons seller and project</description>
    <label>Related Coupon Seller</label>
    <referenceTo>Coupon_Seller__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>