unpackaged/main/default/objects/Activity/fields/RelatedProject__c.field-meta.xml
<CustomField>
    <fullName>RelatedProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0007574 - [AU] GCX: related coupons seller and project</description>
    <label>Related Project</label>
    <referenceTo>EBH_Project__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>