unpackaged/main/default/objects/Activity/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <description>US-0009940 - [UK Risk] Create a New Task Layout for Seller Risk Management Project</description>
    <inlineHelpText>Filled by the Task Creator</inlineHelpText>
    <label>Request Description</label>
    <type>TextArea</type>
</CustomField>