unpackaged/main/default/objects/Activity/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <inlineHelpText>Filled by the Assignee</inlineHelpText>
    <label>Response Description</label>
    <type>TextArea</type>
</CustomField>