unpackaged/main/default/objects/Activity/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>US-0008531 - [NA] Enable Activity, Chatter and Campaigns on Lead</description>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Bounced Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>