unpackaged/main/default/objects/Activity/fields/Scaling_Stage__c.field-meta.xml
<CustomField>
    <fullName>Scaling_Stage__c</fullName>
    <description>US-0006835 [AU] Acquisition Task Changes</description>
    <label>Scaling Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>