unpackaged/main/default/objects/Activity/fields/Seller_Ineligible_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Seller_Ineligible_Reasons__c</fullName>
    <description>US-0006825</description>
    <label>Seller Ineligible Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>