unpackaged/main/default/objects/Activity/fields/SR_Number__c.field-meta.xml
<CustomField>
    <fullName>SR_Number__c</fullName>
    <description>US-0007466 - [AU] Changes to AU Task Recordtype</description>
    <inlineHelpText>Enter the relevant SR number</inlineHelpText>
    <label>SR-Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>