unpackaged/main/default/objects/Activity/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <description>EPH-5718</description>
    <label>Survey ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>