unpackaged/main/default/objects/Activity/fields/SurveyResult1__c.field-meta.xml
<CustomField>
    <fullName>SurveyResult1__c</fullName>
    <description>US-0007890 - [AU] Add 3 fields to activity object for campaign specific outputs</description>
    <inlineHelpText>Answer from survey</inlineHelpText>
    <label>Survey result 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>