unpackaged/main/default/objects/Activity/fields/Task_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed_Date__c</fullName>
    <description>EPH-7879 &quot;Open Related Tasks&quot; and &quot;Completed Related Tasks&quot; tab in Task Detail Page</description>
    <label>Task Completed Date</label>
    <type>DateTime</type>
</CustomField>