unpackaged/main/default/objects/Activity/fields/Task_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Owner_Name__c</fullName>
    <description>EPH-5718</description>
    <formula>Owner:User.FirstName &amp; &#39; &#39; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Owner Name</label>
    <type>Text</type>
</CustomField>