unpackaged/main/default/objects/Activity/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <description>US-0008531</description>
    <inlineHelpText>Enter time spent on the activity (in minutes)</inlineHelpText>
    <label>Time Spent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>