unpackaged/main/default/objects/Activity/fields/Type_of_Task__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Task__c</fullName>
    <description>US-0008531</description>
    <label>Type of Task</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Pitch/Demo</fullName>
            </value>
            <value>
                <fullName>Proactive Support</fullName>
            </value>
            <value>
                <fullName>Reactive Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>