unpackaged/main/default/objects/Activity/fields/Update_User_Availability__c.field-meta.xml
<CustomField>
    <fullName>Update_User_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0011996 - Call booking for Ads</description>
    <label>Update User Availability</label>
    <type>Checkbox</type>
</CustomField>